# libmpv-android

./: .gitignore  Dockerfile  README.md  build.gradle  build.gradle.kts  renovate.json  settings.gradle  settings.gradle.kts
.github/workflows/: build.yaml  publish.yaml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/jdtech/mpv/: MPVLib.java
app/src/main/jni/: Application.mk  jni_utils.h
buildscripts/: README.md  build.sh  buildall.sh  docker-build.sh  patch.sh
buildscripts/include/: depinfo.sh  download-deps.sh  download-sdk.sh  path.sh
buildscripts/patches/ffmpeg/: FFmpeg-devel-v2-avcodec-mediacodecdec-call-MediaCodec.stop-on-close.diff  av1_mediacodec.patch
buildscripts/patches/mbedtls/: mbedtls_fix_x86_compilation.patch
buildscripts/patches/mpv/: ao-aaudio.patch  mpv_restore_default_sub_selection_behavior.patch
buildscripts/scripts/: dav1d.sh  ffmpeg.sh  fontconfig.sh  freetype.sh  fribidi.sh  harfbuzz.sh  libass.sh  libplacebo.sh  libunibreak.sh  libxml2.sh  lua.sh  mbedtls.sh  mpv-android.sh  mpv.sh  shaderc.sh
gradle/: libs.versions.toml
libmpv/: build.gradle  build.gradle.kts
libmpv/src/main/: AndroidManifest.xml
libmpv/src/main/cpp/: CMakeLists.txt  event.cpp  globals.h  jni_utils.cpp  jni_utils.h  log.cpp  log.h  main.cpp  property.cpp  render.cpp
libmpv/src/main/java/dev/jdtech/mpv/: MPVLib.java  MPVLib.kt
libmpv/src/main/jni/: event.cpp  jni_utils.cpp  main.cpp
scripts/: publish-module.gradle
